[package]
name = "eowordles-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
leptos_meta = "0.8.5"
reqwasm = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.142"

[dependencies.eowordle-lib]
git = "https://github.com/hexdecima/eowordles-lib"
rev = "2f032e9ac299b5420afff115a05162afffc8645a"

[profile.release]
lto = true
strip = "symbols"
