[package]
name = "eowordles-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
leptos_meta = "0.8.5"
reqwasm = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.142"

[dependencies.eowordle-lib]
git = "https://github.com/hexdecima/eowordles-lib"
rev = "1e2a4bddb0ebab7506021b5ba6031971826ad06c"

[profile.release]
lto = true
strip = "symbols"
